kubernetes/applications/ceph-storage/manifests/pulze-dashboard/pulze-dashboard-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pulze-dashboard
  namespace: pulze-dashboard
  labels:
    app: pulze-dashboard
spec:
  type: ClusterIP
  selector:
    app: pulze-dashboard
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
