kubernetes/applications/ceph-storage/manifests/pulze-dashboard/pulze-dashboard-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pulze-dashboard-ingress
  namespace: pulze-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pulze.example.com
  rules:
    - host: pulze.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pulze-dashboard
                port:
                  number: 3000
